// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user can not set account profile language if not logged in 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "FORBIDDEN",
      "exception": Object {
        "details": Object {},
        "error": "access-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Access Denied",
      },
    },
    "locations": Array [
      Object {
        "column": 3,
        "line": 2,
      },
    ],
    "message": "Access Denied",
    "path": Array [
      "setAccountProfileLanguage",
    ],
  },
]
`;

exports[`user cannot set account profile language if its not enabled 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "INTERNAL_SERVER_ERROR",
      "exception": Object {
        "details": Object {},
        "error": "invalid-argument",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Primary shop does not define any enabled language with code \\"mockI18n\\"",
      },
    },
    "locations": Array [
      Object {
        "column": 3,
        "line": 2,
      },
    ],
    "message": "Primary shop does not define any enabled language with code \\"mockI18n\\"",
    "path": Array [
      "setAccountProfileLanguage",
    ],
  },
]
`;
